# ml-stutter

./: CMakeLists.txt  README.md
cmake/: teensy41.cmake
include/: app_logic.h  app_state.h  audio_choke.h  audio_effect_base.h  audio_freeze.h  audio_stutter.h  audio_timekeeper.h  bitmaps.h  choke_controller.h  display_io.h  display_manager.h  effect_controller.h  effect_manager.h  effect_quantization.h  encoder_io.h  encoder_menu.h  freeze_controller.h  input_io.h  midi_io.h  stutter_controller.h
schematic/: microloop.kicad_pro  microloop.kicad_sch  new.bak  sym-lib-table
src/: app_logic.cpp  choke_controller.cpp  display_io.cpp  display_manager.cpp  effect_manager.cpp  effect_quantization.cpp  encoder_io.cpp  encoder_menu.cpp  freeze_controller.cpp  input_io.cpp  main.cpp  midi_io.cpp  stutter_controller.cpp
tests/: run_tests.cpp  test_encoders_main.cpp  test_runner.h  test_spsc_queue.cpp  test_timekeeper.cpp  test_trace.cpp
utils/: command.h  span.h  spsc_queue.h  timekeeper.cpp  timekeeper.h  trace.cpp  trace.h
